[Fix]Fixing the alignment of items in landing page

--- a/static/css/card-utils.css
+++ b/static/css/card-utils.css
@@ -56,8 +56,8 @@ width: 100%;        }
     gap:20px;
     width: 100%;
     min-height: 100vh;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     height: fit-content;
     margin-left: 2rem;
     flex-wrap: wrap;
